[package]
name = "big_mac"
version = "0.1.0"
description = "Get mac addresses"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.2"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
